[tool.poetry]
name = "minoo"
version = "0.1.0"
description = ""
authors = ["Ali Parandeh <Ali.Parandeh@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
jupyterlab = "^3.1.4"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
